Refactor: Migrate Kompendium to Meta including podcast assets and links

--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Kunterbunt Kompendium - Podcast</title>
+    <title>Villa Kunterbunt Meta Podcast</title>
     <!-- Same styles and structure as main podcast page -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -284,7 +284,7 @@
     <div class="ambient-bg"></div>
     <div class="main-container">
         <header>
-            <h1>Villa Kunterbunt Kompendium</h1>
+            <h1>Villa Kunterbunt Meta Podcast</h1>
             <div class="subtitle">Das Audio-Archiv</div>
         </header>
 
