Fix: Desktop whitespace and Podcast Assets update

--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Kunterbunt Cowork - Podcast</title>
+    <title>Villa Kunterbunt Cowork</title>
     <!-- Same styles and structure as main podcast page -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -285,13 +285,13 @@
     <div class="main-container">
         <header>
             <h1>Villa Kunterbunt Cowork</h1>
-            <div class="subtitle">Das Audio-Archiv</div>
+            <div class="subtitle">Villa Kunterbunt Anthologie</div>
         </header>
 
         <div class="episode-list">
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../../../website/data/main/images/abook_cover_front_thumb.png" alt="Cover Art"
+                <img src="../images/die_villa_kunterbunt_anthologie_podcast_thumb.png" alt="Cover Art"
                     class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Cowork Podcast</div>
