--- a/core/data/main/podcast/dossier.html
+++ b/core/data/main/podcast/dossier.html
@@ -353,8 +353,7 @@
         </header>
 
         <article class="episode-card">
-            <img src="../../../website/data/main/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                alt="Cover Art" class="cover-art">
+            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
 
             <div class="episode-tag">Episode 03</div>
 
@@ -382,8 +381,7 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../audio/villa_kunterbunt_dossier_podcast.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/villa_kunterbunt_dossier_podcast.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
                 <a href="analyse.html" class="nav-link prev-episode highlight">
