--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -47,7 +47,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png');
+            background-image: url('../images/die_villa_kunterbunt_podcast_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -390,8 +390,7 @@
 
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 01</div>
                     <h2 class="episode-title">Die Satire</h2>
@@ -426,8 +425,7 @@
 
             <!-- Episode 2 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 02</div>
                     <h2 class="episode-title">Die Analyse</h2>
@@ -463,8 +461,7 @@
 
             <!-- Episode 3 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 03</div>
                     <h2 class="episode-title">Das Dossier</h2>
@@ -499,8 +496,7 @@
 
             <!-- Episode 4 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 04</div>
                     <h2 class="episode-title">Der DeepDive</h2>
@@ -534,8 +530,7 @@
 
             <!-- Episode 5 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 05</div>
                     <h2 class="episode-title">Der Zupftest</h2>
@@ -569,8 +564,7 @@
 
             <!-- Episode 6 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../assets/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 06</div>
                     <h2 class="episode-title">Die Studie</h2>
@@ -605,8 +599,7 @@
 
             <!-- Episode 7 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../../../website/data/main/images/abook_cover_front_thumb.png" alt="Cover Art"
-                    class="cover-art">
+                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Episode 07</div>
                     <h2 class="episode-title">Das Korrespondenz Epos</h2>
