--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -43,7 +43,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../../../website/data/main/images/wallpaper.png');
+            background-image: url('../images/das_villa_kunterbunt_kompendium_podcast_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -285,13 +285,13 @@
     <div class="main-container">
         <header>
             <h1>Villa Kunterbunt Meta Podcast</h1>
-            <div class="subtitle">Das Audio-Archiv</div>
+            <div class="subtitle">Villa Kunterbunt Kompendium</div>
         </header>
 
         <div class="episode-list">
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../../../website/data/main/images/abook_cover_front_thumb.png" alt="Cover Art"
+                <img src="../images/das_villa_kunterbunt_kompendium_podcast_thumb.png" alt="Cover Art"
                     class="cover-art">
                 <div class="episode-content">
                     <div class="episode-tag">Meta Podcast</div>
