--- a/core/data/meta/podcast/index.html
+++ b/core/data/meta/podcast/index.html
@@ -286,6 +286,15 @@
         <header>
             <h1>Villa Kunterbunt Meta Podcast</h1>
             <div class="subtitle">Villa Kunterbunt Kompendium</div>
+
+            <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
+                <a href="../../main/podcast/index.html" class="action-link"
+                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🏰 Zum Haupt
+                    Podcast</a>
+                <a href="../../cowork/podcast/index.html" class="action-link"
+                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎧 Zum Cowork
+                    Podcast</a>
+            </div>
         </header>
 
         <div class="episode-list">
