--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -390,7 +390,16 @@
 
             <!-- Episode 1 -->
             <article class="episode-card fade-in-up delay-1">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 01</div>
                     <h2 class="episode-title">Die Satire</h2>
