Fix: Standardize audio filenames and update links

--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -425,7 +425,8 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-1" src="../audio/villa_kunterbunt_satire.mp3" preload="metadata"></audio>
+                    <audio id="audio-player-1" src="../audio/villa_kunterbunt_satire_podcast.mp3"
+                        preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="satire.html" class="action-link">Zur Folge</a>
@@ -530,7 +531,8 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-4" src="../audio/villa_kunterbunt_deepdive.mp3" preload="metadata"></audio>
+                    <audio id="audio-player-4" src="../audio/villa_kunterbunt_deepdive_podcast.mp3"
+                        preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="deepdive.html" class="action-link">Zur Folge</a>
@@ -564,7 +566,8 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-5" src="../audio/villa_kunterbunt_zupftest.mp3" preload="metadata"></audio>
+                    <audio id="audio-player-5" src="../audio/villa_kunterbunt_zupftest_podcast.mp3"
+                        preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
                     <a href="zupftest.html" class="action-link">Zur Folge</a>
@@ -598,7 +601,7 @@
                             </div>
                         </div>
                     </div>
-                    <audio id="audio-player-6" src="../audio/villa_kunterbunt_die_studie.mp3"
+                    <audio id="audio-player-6" src="../audio/villa_kunterbunt_die_studie_podcast.mp3"
                         preload="metadata"></audio>
                 </div>
                 <div style="margin-top: 15px; text-align: right;">
