--- a/core/data/cowork/podcast/index.html
+++ b/core/data/cowork/podcast/index.html
@@ -348,11 +348,11 @@
                 <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
                     <div class="flipper">
                         <div class="front">
-                            <img src="../images/die_villa_kunterbunt_anthologie_podcast_thumb.png" alt="Front Cover">
+                            <img src="../images/die_villa_kunterbunt_anthologie_audiobook_cover_back.png"
+                                alt="Front Cover">
                         </div>
                         <div class="back">
-                            <img src="../images/die_villa_kunterbunt_anthologie_audiobook_cover_back.png"
-                                alt="Back Cover">
+                            <img src="../images/die_villa_kunterbunt_anthologie_podcast_thumb.png" alt="Back Cover">
                         </div>
                     </div>
                 </div>
@@ -380,6 +380,9 @@
                     </div>
                     <audio id="audio-player-1" src="../audio/villa_kunterbunt_episode_vi_abook.mp3"
                         preload="metadata"></audio>
+                    <div style="margin-top: 15px; text-align: right;">
+                        <a href="abook.html" class="action-link">Zur Folge</a>
+                    </div>
                 </div>
             </article>
         </div>
