--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -683,7 +683,9 @@
                     <audio id="audio-player-7" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3"
                         preload="metadata"></audio>
                 </div>
-                <!-- No separate page for this yet -->
+                <div style="margin-top: 15px; text-align: right;">
+                    <a href="korrespondenz_epos.html" class="action-link">Zur Folge</a>
+                </div>
             </article>
 
         </div>
