--- a/core/data/main/podcast/analyse.html
+++ b/core/data/main/podcast/analyse.html
@@ -392,6 +392,11 @@
                     <span>Nächste Episode: Das Dossier</span>
                 </a>
             </div>
+            <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0;">
+                <a href="index.html" class="nav-link centered-link highlight">
+                    <span>Alle Episoden</span>
+                </a>
+            </div>
         </article>
 
         <footer>
