--- a/core/data/main/podcast/korrespondenz_epos.html
+++ b/core/data/main/podcast/korrespondenz_epos.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Die Satire - Villa Kunterbunt</title>
+    <title>Das Korrespondenz Epos - Villa Kunterbunt</title>
     <meta name="description"
-        content="Episode 3: Die Satire. In dieser Podcast-Folge wird das finale Kapitel der „Villa Kunterbunt“ analysiert: die satirische Initiativbewerbung des Kunden als Akt der subversiven Compliance.">
+        content="Episode 7: Das Korrespondenz Epos. Eine Zusammenfassung der Ereignisse rund um die Villa Kunterbunt.">
     <!-- Google Fonts for premium typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +46,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('../../../website/data/main/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png');
+            background-image: url('../../../website/data/main/images/die_villa_kunterbunt_podcast_thumb.png');
             background-size: cover;
             background-position: center;
             filter: blur(60px) brightness(0.25) saturate(1.2);
@@ -283,6 +283,7 @@
             color: var(--text-main);
             text-decoration: none;
             transition: color 0.2s;
+            display: inline-block;
         }
 
         a:hover {
@@ -336,21 +337,17 @@
     <div class="main-container">
         <header>
             <div class="subtitle">Die Villa Kunterbunt</div>
-            <h1>Die Satire</h1>
+            <h1>Das Epos</h1>
         </header>
 
         <article class="episode-card">
-            <img src="../../../website/data/main/images/die_villa_kunterbunt_ebook_cover_front_hq_thumb.png"
-                alt="Cover Art" class="cover-art">
+            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
 
-            <div class="episode-tag">Episode 01</div>
+            <div class="episode-tag">Episode 07</div>
 
             <div class="episode-description">
-                In dieser Podcast-Folge wird das finale Kapitel der „Villa Kunterbunt“ analysiert: die satirische
-                Initiativbewerbung des Kunden als Akt der subversiven Compliance. Die Sprecher diskutieren, wie der
-                Autor durch die Übernahme der <strong>E.ON</strong>-Sprache die Ineffizienz des Systems (z. B. 171 € für
-                15 Minuten mangelhafte Arbeit) bloßstellt und sich im Epilog vom leidenden Kunden zum überlegenen
-                Forscher einer „experimentellen Studie“ wandelt.
+                Das vollständige <strong>Korrespondenz Epos</strong>. Eine Zusammenfassung der Ereignisse rund um die
+                Villa Kunterbunt.
             </div>
 
             <div class="player-controls">
@@ -369,15 +366,12 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../audio/Die%20Villa%20Kunterbunt%20–%20Satire.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/villa_kunterbunt_korrespondenz_epos.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
-                <a href="analyse.html" class="nav-link next-episode highlight">
-                    <span>Nächste Episode: Die Analyse</span>
+                <a href="systemanalyse.html" class="nav-link prev-episode highlight">
+                    <span>Die Studie</span>
                 </a>
-            </div>
-            <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0;">
                 <a href="index.html" class="nav-link centered-link highlight">
                     <span>Alle Episoden</span>
                 </a>
