--- a/core/data/main/podcast/systemanalyse.html
+++ b/core/data/main/podcast/systemanalyse.html
@@ -370,13 +370,17 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../assets/audio/villa_kunterbunt_die_studie.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/villa_kunterbunt_die_studie_podcast.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
                 <a href="zupftest.html" class="nav-link prev-episode highlight">
                     <span>Vorherige Episode</span>
                 </a>
+                <a href="korrespondenz_epos.html" class="nav-link next-episode highlight">
+                    <span>Nächste: Das Epos</span>
+                </a>
+            </div>
+            <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0;">
                 <a href="index.html" class="nav-link centered-link highlight">
                     <span>Alle Episoden</span>
                 </a>
