Fix: Standardize podcast navigation buttons labels and layout

--- a/core/data/main/podcast/korrespondenz_epos.html
+++ b/core/data/main/podcast/korrespondenz_epos.html
@@ -370,8 +370,10 @@
 
             <div class="nav-links">
                 <a href="systemanalyse.html" class="nav-link prev-episode highlight">
-                    <span>Die Studie</span>
+                    <span>Vorherige Episode: Die Studie</span>
                 </a>
+            </div>
+            <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0;">
                 <a href="index.html" class="nav-link centered-link highlight">
                     <span>Alle Episoden</span>
                 </a>
