--- a/core/data/main/podcast/zupftest.html
+++ b/core/data/main/podcast/zupftest.html
@@ -374,7 +374,7 @@
 
             <div class="nav-links">
                 <a href="deepdive.html" class="nav-link prev-episode highlight">
-                    <span>Vorherige Episode</span>
+                    <span>Vorherige Episode: Der DeepDive</span>
                 </a>
                 <a href="systemanalyse.html" class="nav-link next-episode highlight">
                     <span>Nächste Episode: Die Studie</span>
