--- a/core/data/main/podcast/systemanalyse.html
+++ b/core/data/main/podcast/systemanalyse.html
@@ -374,10 +374,10 @@
 
             <div class="nav-links">
                 <a href="zupftest.html" class="nav-link prev-episode highlight">
-                    <span>Vorherige Episode</span>
+                    <span>Vorherige Episode: Der Zupftest</span>
                 </a>
                 <a href="korrespondenz_epos.html" class="nav-link next-episode highlight">
-                    <span>Nächste: Das Epos</span>
+                    <span>Nächste Episode: Das Epos</span>
                 </a>
             </div>
             <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0;">
