--- a/core/data/main/podcast/index.html
+++ b/core/data/main/podcast/index.html
@@ -422,12 +422,8 @@
             <div class="subtitle">Das Korrespondenz Epos</div>
 
             <div style="margin-top: 30px; display: flex; gap: 15px; justify-content: center; flex-wrap: wrap;">
-                <a href="../../meta/podcast/index.html" class="action-link"
-                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎙️ Zum
-                    Meta Podcast</a>
-                <a href="../../cowork/podcast/index.html" class="action-link"
-                    style="border-color: var(--accent-gold); background: rgba(212, 175, 55, 0.1);">🎧 Zum Cowork
-                    Podcast</a>
+                <a href="../../meta/podcast/index.html" class="action-link">🎙️ Zum Meta Podcast</a>
+                <a href="../../cowork/podcast/index.html" class="action-link">🎧 Zum Cowork Podcast</a>
             </div>
         </header>
 
@@ -480,7 +476,16 @@
 
             <!-- Episode 2 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 02</div>
                     <h2 class="episode-title">Die Analyse</h2>
@@ -516,7 +521,16 @@
 
             <!-- Episode 3 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 03</div>
                     <h2 class="episode-title">Das Dossier</h2>
@@ -551,7 +565,16 @@
 
             <!-- Episode 4 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 04</div>
                     <h2 class="episode-title">Der DeepDive</h2>
@@ -586,7 +609,16 @@
 
             <!-- Episode 5 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 05</div>
                     <h2 class="episode-title">Der Zupftest</h2>
@@ -621,7 +653,16 @@
 
             <!-- Episode 6 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 06</div>
                     <h2 class="episode-title">Die Studie</h2>
@@ -656,7 +697,16 @@
 
             <!-- Episode 7 -->
             <article class="episode-card fade-in-up delay-2">
-                <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Cover Art" class="cover-art">
+                <div class="cover-flip-container" onclick="this.classList.toggle('flipped')">
+                    <div class="flipper">
+                        <div class="front">
+                            <img src="../images/die_villa_kunterbunt_podcast_thumb.png" alt="Front Cover">
+                        </div>
+                        <div class="back">
+                            <img src="../images/die_villa_kunterbunt_abook_cover_back.png" alt="Back Cover">
+                        </div>
+                    </div>
+                </div>
                 <div class="episode-content">
                     <div class="episode-tag">Episode 07</div>
                     <h2 class="episode-title">Das Korrespondenz Epos</h2>
