UI: Standardize footers and fix centering for all podcast files

--- a/core/data/meta/podcast/korrespondenz_system_analyse.html
+++ b/core/data/meta/podcast/korrespondenz_system_analyse.html
@@ -366,7 +366,8 @@
             <audio id="audio-player" src="../audio/villa_kunterbunt_korrespondenz_system_analyse.mp3"
                 preload="metadata"></audio>
 
-            <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0; justify-content: center;">
+            <div class="nav-links"
+                style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center;">
                 <a href="index.html" class="nav-link highlight">
                     <span>Alle Episoden</span>
                 </a>
