--- a/core/data/cowork/podcast/abook.html
+++ b/core/data/cowork/podcast/abook.html
@@ -372,7 +372,8 @@
             </div>
             <audio id="audio-player" src="../audio/villa_kunterbunt_episode_vi_abook.mp3" preload="metadata"></audio>
 
-            <div class="nav-links" style="border-top: none; margin-top: 20px; padding-top: 0; justify-content: center;">
+            <div class="nav-links"
+                style="border-top: none; margin-top: 20px; padding-top: 0; display: flex; justify-content: center;">
                 <a href="index.html" class="nav-link highlight">
                     <span>Alle Episoden</span>
                 </a>
