--- a/core/data/main/podcast/satire.html
+++ b/core/data/main/podcast/satire.html
@@ -396,8 +396,7 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../audio/Die%20Villa%20Kunterbunt%20–%20Satire.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/villa_kunterbunt_satire_podcast.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
                 <a href="analyse.html" class="nav-link next-episode highlight">
