--- a/core/data/main/podcast/zupftest.html
+++ b/core/data/main/podcast/zupftest.html
@@ -396,8 +396,7 @@
                     </div>
                 </div>
             </div>
-            <audio id="audio-player" src="../audio/Die%20Villa%20Kunterbunt%20–%20Zupftest.mp3"
-                preload="metadata"></audio>
+            <audio id="audio-player" src="../audio/villa_kunterbunt_zupftest_podcast.mp3" preload="metadata"></audio>
 
             <div class="nav-links">
                 <a href="deepdive.html" class="nav-link prev-episode highlight">
